force-app/main/default/objects/Case/fields/Case_related__c.field-meta.xml
<CustomField>
    <fullName>Case_related__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Related To</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Casess</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>