force-app/main/default/objects/Case/fields/Found_Yoda__c.field-meta.xml
<CustomField>
    <fullName>Found_Yoda__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Found Yoda</label>
    <type>Checkbox</type>
</CustomField>