force-app/main/default/objects/Case/fields/Planet_Acess_Code__c.field-meta.xml
<CustomField>
    <fullName>Planet_Acess_Code__c</fullName>
    <label>Código de acceso</label>
    <length>15</length>
    <type>Text</type>
</CustomField>