force-app/main/default/objects/Case/fields/Reason_for_closing__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_closing__c</fullName>
    <label>Reason for closing the case</label>
    <length>100</length>
    <type>Text</type>
</CustomField>