force-app/main/default/objects/Case/fields/Successful__c.field-meta.xml
<CustomField>
    <fullName>Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escaneo exitoso</label>
    <type>Checkbox</type>
</CustomField>