force-app/main/default/objects/Case/validationRules/Require_Reason_For_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Reason_For_Close</fullName>
    <active>false</active>
    <description>Require a reason for close a case</description>
    <errorConditionFormula>AND(
       TEXT(Status) = &quot;Closed&quot;,
       ISBLANK(  Reason_for_closing__c ) 
)</errorConditionFormula>
    <errorMessage>Se necesita una razon para cerrar el caso</errorMessage>
</ValidationRule>